<resources>
    <string name="app_name">Mirgor 5S</string>
    <string name="verAuditoria">Detalle de auditoría</string>
    <string name="start">AUDITAR</string>
    <string name="contact">CONTACTO</string>
    <string name="firstTime">Primera vez, click aquí</string>
    <string name="myAudits">AUDITORIAS</string>
    <string name="settings">AJUSTES</string>
    <string name="settingsMin">AJUSTES</string>
    <string name="quieroReportar">Quiero contactar con el equipo de e-5S</string>
    <string name="enviarMail">Enviar mail.</string>
    <string name="sinAreas">Aun no hay areas creadas. Cree un área nueva."</string>
    <string name="autenticacionFallida">Autenticacion fallida. Por favor, regístrate.</string>
    <string name="sinConexionIntenteMasTarde">No hay conexión a internet, intenta mas tarde</string>
    <string name="reporteAuditoria">Reporte de auditoría.</string>
    <string name="errorRevisarPermisos">Error, controla permisos.</string>
    <string name="tituloPdf">Reporte de auditoría de 5S</string>
    <string name="ResultadoFinal">Resultado final.</string>
    <string name="puntajeFinal">Puntaje final: </string>
    <string name="fecha">Fecha: </string>
    <string name="score">Puntaje: </string>
    <string name="detalleAuditoria">Detalle de auditoría</string>
    <string name="misAuditorias">Mis auditorías</string>
    <string name="textoIssue">Por favor, dinos si tuviste problemas usando nuestra app, sugerencias también son bienvenidas</string>
    <string name="audit5s">Auditoría 5S</string>
    <string name="agregarComentario">Agregar comentario</string>
    <string name="favorAgregueComentario">Por favor, ingresa un comentario para la foto.</string>
    <string name="favorAgregueComentarioGeneral">Ingrese un comentario</string>
    <string name="comment">comentario</string>
    <string name="advertencia">Atención!</string>
    <string name="auditoriaSinTerminar">La auditoría no esta finalizada.</string>
    <string name="continuar">continuar?</string>
    <string name="si">Si</string>
    <string name="seiriSeiri">Seiri / Clasificación</string>
    <string name="seitonSeiton">Seiton / Orden</string>
    <string name="seisoSeiso">Seiso / Limpieza</string>
    <string name="seiketsuSeiketsu">Seiketsu / Estandarización</string>
    <string name="shitsukeShitsuke">Shitsuke / Disciplina</string>
    <string name="noEncontroDatos">No se encontraron datos</string>
    <string name="dismiss">Salir</string>
    <string name="appNecesitaPermiso">La app necesita permiso para guardar las auditorías</string>
    <string name="damePermiso">Por favor, concede permiso para guardar las auditorías</string>
    <string name="completarItemFaltante">Debes completar los item:</string>
    <string name="avisoSignout">Estas a punto de salir de tu cuenta</string>
    <string name="databaseDelete">Borrar datos</string>
    <string name="auditsWillBeDeleted">Todas tus auditorías seran borradas en forma permanente</string>
    <string name="confirmaBorrarBaseDeDato">La información fue borrada con éxito.</string>
    <string name="selectArea">Seleccionar área</string>
    <string name="audit">Auditoría</string>
    <string name="target">Objetivo</string>
    <string name="seleccionaImagen">Elegir imagen</string>
    <string name="ok">Ok</string>
    <string name="permisoParaFotos">Por favor, concede permisos para guardar las fotos</string>
    <string name="noSeCreoDirectorio">El directorio solicitado no fue creado</string>
    <string name="nombreArea">Ingresa el nombre de la nueva área</string>
    <string name="areaName">nombre del área</string>
    <string name="creadoExitosamente">fue creada.</string>
    <string name="auditResult">Resultado de la auditoría</string>
    <string name="bad">Malo</string>
    <string name="average">Regular</string>
    <string name="good">Bueno</string>
    <string name="auditResultFor">Resultado para:</string>
    <string name="titulo">Titulo:</string>
    <string name="manageAuditAreas">Gestión de áreas</string>
    <string name="databaseAuditDelete">Borrar base de datos</string>
    <string name="goBack">Volver</string>
    <string name="enunciado">Enunciado</string>
    <string name="clicToAddComment">click aquí para agregar comentario</string>
    <string name="e5s">e-5S</string>
    <string name="mail">mail</string>
    <string name="hinPass">contraseña</string>
    <string name="signIn">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="disclaimer">Por favor, regístrate. Sólo solicitamos tu mail a modo de autentificación.</string>
    <string name="auditResult1">Audit.</string>
    <string name="version">v1.0.10</string>
    <string name="tutorial_tit_setting">Antes de empezar a auditar</string>
    <string name="tutorial_desc_setting">Primero, debemos crear un área auditable. vamos a Ajustes.</string>
    <string name="verTutorial">Agregue un comentario general para la pregunta</string>
    <string name="no">No</string>
    <string name="tutorial_tit_area">Gestion de áreas</string>
    <string name="tutorial_desc_area">Click aquí para agregar o eliminar áreas.</string>
    <string name="tutorial_desc_manage">Click aquí para agregar un área, click en la cruz roja para eliminar.</string>
    <string name="tutorial_tit_manage">Agrega un área de auditoría</string>
    <string name="tutorial_tit_graficos_ver">Revisa la auditoría</string>
    <string name="tutorial_desc_graficos_ver">Click aquí para ver puntajes y fotos.</string>
    <string name="tutorial_tit_graficos_pdf">Enviar reporte Excel</string>
    <string name="tutorial_desc_graficos_pdf">Click aquí para enviar un reporte Excel con puntajes, fotos y comentarios.</string>
    <string name="tutorial_tit_subitem_general">Empecemos</string>
    <string name="tutorial_desc_subitem_general">Estás listo para auditar. Selecciona un área.</string>
    <string name="tutorial_tit_subitem_criteria">Revisar Criterios</string>
    <string name="tutorial_desc_subitem_criteria">Si no estas seguro como puntuar, revisa los criterios.</string>
    <string name="tutorial_tit_subitem_foto">Toma fotos</string>
    <string name="tutorial_desc_subitem_foto">Agrega fotos y comentarios.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_tit_strt">Comienza la auditoría</string>
    <string name="tutorial_desc_strt">Elige una área y comienza a auditar ahora mismo.</string>
    <string name="tutorial_tit_logout">Salir de tu cuenta out</string>
    <string name="tutorial_desc_logout">Click aquí para salir de tu cuenta o ingresar con otro usuario.</string>
    <string name="tutorial_tit_delete">Borra todos los datos</string>
    <string name="tutorial_desc_delete">Click aquí si quieres eliminar todas las auditorias y todas las areas.</string>
    <string name="tutorial_tit_guardar">Guarda la auditoría</string>
    <string name="tutorial_desc_guardar">Una vez que termines la auditoría, guárdala y procede a ver los resultados.</string>
    <string name="tutorial_tit_navegar">Navega a traves de la auditoría</string>
    <string name="tutorial_desc_navegar">Click aquí para navegar la auditoría o deslize la pantalla.</string>
    <string name="tutorial_tit_subitem_inicial">Comienza la auditoría</string>
    <string name="tutorial_desc_subitem_inicial">Lee el enunciado y puntua de acuerdo a los criterios</string>
    <string name="noHayInternet">Se requiere internet para registrar nuevos usuarios.</string>
    <string name="noHayInternetlogin">Se requiere internet para el primer login</string>
    <string name="reintentar">Reintentar</string>
    <string name="activarTuto">Activar tutorial</string>
    <string name="desactivarTuto">Desactivar tutorial</string>
    <string name="tutorial_tit_tuto">Tutorial</string>
    <string name="tutorial_desc_tuto">Click aquí para activar y desactivar el tutorial.</string>
    <string name="tutorial_tit_search">Revisa tus auditorias</string>
    <string name="tutorial_desc_search">Click aquí para revisar tus auditorias terminadas.</string>
    <string name="deleteAudit">Borrar auditoría</string>
    <string name="auditoriaSeEliminara">La auditoría será eliminada.</string>
    <string name="titNoMemoria">Sin almacenamiento</string>
    <string name="noMemoria">Sin almacenamiento disponible. Inserta una memoria SD o desconecta tu dispositivo de la PC.</string>
    <string name="guardardar">Deseas guardar antes de salir?</string>
    <string name="usuarioRepetido">El mail ya fue registrado anteriormente</string>
    <string name="datosErroneos">Contraseña incorrecta</string>
    <string name="forgot">Olvide mi constraseña</string>
    <string name="noMail">Ingresa un mail válido para recuperar su contraseña</string>
    <string name="mailReestablecimientoEnviado">mail enviado a:</string>
    <string name="resend">Reenviar</string>
    <string name="later">Luego</string>
    <string name="mailReestablecerError">No se han enviado las instrucciones, verifique tu conexión.</string>
    <string name="verPass">Mostrar constraseña</string>
    <string name="passwordOlvidada">Recuperación de contraseña</string>
    <string name="enviaremosInstrucciones">Enviaremos un mail de recuperación a:</string>
    <string name="tit_quit">Salir</string>
    <string name="des_quit">Salir de e-5S?</string>
    <string name="rateUsl1">Gracias por usar nuestra App!</string>
    <string name="rateUsl2">¿Te gustaría ayudarnos clasificando la App en la tienda de aplicaciones?</string>
    <string name="titRating">Apoya esta app.</string>
    <string name="rateOurApp">Califica la App</string>
    <string name="bienVenida">Bienvenido</string>
    <string name="bienvenido">Gracias por descargar nuestra app.\nQuieres ver el tutorial?</string>
    <string name="quit">Salir</string>
    <string name="delteAreaOk">El área fue eliminada.</string>
    <string name="deleteTituloDialog">Eliminar área</string>
    <string name="elArea">El área:</string>
    <string name="deletePermanente">y auditorias relacionadas, seran eliminadas.</string>
    <string name="deseaContinuar">Desea continuar?</string>
    <string name="delete">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="ingreseUsuarioValido">Por favor ingrese nombre de usuario valido</string>
    <string name="ingreseContraseniaValida">Por favor ingrese contraseña válida</string>
    <string name="caracteresContrasenia">La contraseña debe tener al menos 6 caracteres</string>
    <string name="contraseniasNoCoinciden">las constraseñas no coinciden</string>
    <string name="signOut">Salir de su cuenta</string>
    <string name="verCriterios">Criterios</string>
    <string name="criteriaTitulo">Criterios</string>
    <string name="sacarFoto">Agregar foto</string>
    <string name="guardarAuditoria">Guardar auditoría</string>
    <string name="salir">Salir</string>
    <string name="manageAreas">Gestionar áreas</string>
    <string name="addNewArea">Agregar nueva área</string>
    <string name="generarPDF">Enviar reporte PDF</string>
    <string name="errorPruebeNuevamente">Error, intente nuevamente</string>
    <string name="preguntasCompletadas">Item completo</string>
    <string name="faltanPreguntas">Aun por completar: </string>
    <string name="pregunta">preguntas</string>
    <string name="tituloFragmentPreAudit">Elija \"S\" e item para auditar</string>
    <string name="saveAudit">Guardar auditoría</string>
    <string name="editarCuestionarios">Editar cuestionarios</string>
    <string name="OK">OK</string>
    <string name="estructuraSimplificada">Simple</string>
    <string name="estructuraEstructurada">Estructurado</string>
    <string name="elegirEstructura">Estructura</string>
    <string name="Nueva_Area">Nueva área</string>
    <string name="volver">Volver</string>
    <string name="tituloEdicionCriterioDefault">Editar criterios estándar</string>
    <string name="criteriosEstandar">Criterios estándar</string>
</resources>