<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item android:title="@string/seiriSeiri">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="Item 1" />
                <item

                    android:title="Item 2" />

                <item

                    android:title="Item 3" />
                <item

                    android:title="Item 4" />

            </group>
        </menu>
    </item>


    <item android:title="@string/seitonSeiton">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:title="Item 1" />
                <item

                    android:title="Item 2" />

                <item

                    android:title="Item 3" />
                <item

                    android:title="Item 4" />

            </group>
        </menu>
    </item>
    <item android:title="@string/seisoSeiso">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:title="Item 1" />
                <item

                    android:title="Item 2" />

                <item

                    android:title="Item 3" />
                <item

                    android:title="Item 4" />

            </group>
        </menu>
    </item>
    <item android:title="@string/seiketsuSeiketsu">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:title="Item 1" />
                <item

                    android:title="Item 2" />

                <item

                    android:title="Item 3" />
                <item

                    android:title="Item 4" />

            </group>
        </menu>
    </item>
    <item android:title="@string/shitsukeShitsuke">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:title="Item 1" />
                <item

                    android:title="Item 2" />

                <item

                    android:title="Item 3" />
                <item

                    android:title="Item 4" />

            </group>
        </menu>
    </item>


</menu>