<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/marfil"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nomad.mrg5s.View.Activities.SettingsActivity">
    <LinearLayout
        android:id="@+id/linearParaCoordinar"
        android:background="@color/blancoNomad"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/textoTituloManage"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/textoTitulosInternos"
        android:layout_marginTop="@dimen/margenChico"
        android:gravity="center"
        android:text="@string/manageAreas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.RecyclerView
        android:clipToPadding="false"
        android:paddingBottom="@dimen/paddingBottomRecycler"
        android:id="@+id/recyclerArea"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margenChico"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:background="@android:color/transparent"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <com.github.clans.fab.FloatingActionButton
            android:layout_gravity="center"
            android:id="@+id/fabNuevaArea"
            app:fab_label="@string/saveAudit"
            android:layout_marginStart="@dimen/margenChico"
            android:layout_marginEnd="@dimen/margenChico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textoFabPreAudit"
            android:paddingStart="@dimen/margenChico"
            android:paddingEnd="@dimen/margenChico"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/Nueva_Area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</FrameLayout>
