<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/blancoNomad"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nomad.mrg5s.View.Fragments.FragmentPreAudit">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/primary_text"
            android:textSize="@dimen/textoTitulosInternos"
            android:layout_margin="@dimen/margenGrande"
            android:gravity="center"
            android:text="@string/tituloEdicionCriterioDefault"
            android:id="@+id/tituloEdicionCriterioDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:clipToPadding="false"
            android:paddingBottom="@dimen/paddingBottomRecycler"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@color/colorAccent"
            android:fadeScrollbars="false"
            android:scrollbarSize="@dimen/margenMini"
            android:id="@+id/recyclercritDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>



    </LinearLayout>
</ScrollView>
   
    <LinearLayout
        android:background="@android:color/transparent"
        android:id="@+id/linearAudit"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:fab_colorNormal="@color/mirgorNaranja"
            android:layout_gravity="center"
            android:id="@+id/fabCerrarEditCriterios"
            app:fab_label="@string/saveAudit"
            android:layout_marginStart="@dimen/margenChico"
            android:layout_marginEnd="@dimen/margenChico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
        android:id="@+id/textoFabPreAudit"
        android:paddingStart="@dimen/margenChico"
        android:paddingEnd="@dimen/margenChico"
        android:layout_gravity="center"
        android:gravity="end"
        android:text="@string/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>



</FrameLayout>
