<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nomad.mrg5s.View.Activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mirgorBlanco"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap1"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile2" />

            <Button
                android:id="@+id/botonManageAreas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:text="@string/manageAuditAreas"

                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap2"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile3" />

            <Button
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:id="@+id/botonLogOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/signOut"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap3"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile4" />

            <Button
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:id="@+id/botonTuto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap4"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile4.5" />

            <Button
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:id="@+id/botonBorrarTodo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/databaseAuditDelete"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap5"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile5" />

            <Button
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:id="@+id/botonRateApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/editarCuestionarios"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tap6"
                android:layout_width="@dimen/anchoBullet"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margenMicro"
                android:layout_marginTop="@dimen/margenMicro"
                android:background="@color/tile6" />

            <Button
                android:paddingEnd="@dimen/margenMini"
                android:paddingStart="@dimen/margenMini"
                android:id="@+id/botonEditCriterioDefault"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/criteriosEstandar"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textoSettings" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearAudit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@android:color/transparent"
        android:orientation="vertical">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/botonVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margenChico"
            android:layout_marginStart="@dimen/margenChico"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:fab_label="@string/saveAudit" />

        <TextView
            android:id="@+id/textoFabVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:paddingEnd="@dimen/margenChico"
            android:paddingStart="@dimen/margenChico"
            android:text="@string/volver" />
    </LinearLayout>
</FrameLayout>  




